--- a/src/main/webapp/script/grupo/Create.xhtml
+++ b/src/main/webapp/script/grupo/Create.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateGrupoTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.CreateGrupoTitle}"></p:outputLabel>
         </ui:define>
         <ui:define name="west">
             <p:accordionPanel multiple="true" cache="true" id="accionesaccordion1">
@@ -20,7 +20,7 @@
         <ui:define name="body">
 
             <h:form>
-                <p:panel header="#{bundle.CreateGrupoTitle}">
+           
                     <p:fieldset legend="Datos generales">
                         <h:panelGrid columns="3" cellpadding="5">
                             <h:outputLabel value="#{bundle.CreateGrupoLabel_idGrupo}" for="idGrupo" style="font-weight:bold"/>
@@ -78,7 +78,6 @@
 
 
 
-                </p:panel>
             </h:form>
         </ui:define>
     </ui:composition>
