--- a/src/main/webapp/script/producto/Edit.xhtml
+++ b/src/main/webapp/script/producto/Edit.xhtml
@@ -297,7 +297,7 @@
                             <f:facet name="header">
                                 <h:outputText value="Dirección"/>
                             </f:facet>
-                            <h:outputText value="#{subitem.direccion}"/>
+                            <h:outputText value="#{subitem.direccionMunicipal}"/>
                         </p:column>
 
                         <p:column>
