--- a/src/main/webapp/script/appSetting/config.xhtml
+++ b/src/main/webapp/script/appSetting/config.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:pe="http://primefaces.org/ui/extensions"
+      xmlns:go="http://java.sun.com/jsf/composite/go">
 
 
     <ui:composition template="/script/template_inbox.xhtml">
@@ -32,14 +33,41 @@
             </style>
         </ui:define>
 
+        <ui:define name="west" id="west">
+
+            <go:vistasList id="vistasList" update=":vistasList:vistasForm :mainform:messages :formfilter:panelFilter0:panelFilter :form" 
+                           controllerMBean="#{appSettingController}"
+                           user="#{UserSessionBean.current}"/>
+
+            <br/>
+
+        </ui:define>
+
         <ui:define name="body">
+            
+              <h:form id="formfilter">
+                    <go:filterView id="panelFilter0" titleIconClass="fa fa-filter page-header-icon"
+                                   controllerMBean="#{appSettingController}" 
+                                   vista="#{appSettingController.vista}"
+                                   filterHelper="#{appSettingController.filterHelper}" 
+                                   canChangeFilters="#{filtroAcceso.verificarAccesoAFiltrosIndex()}"
+                                   update=":mainform:messages :form" vistaControllerBackOutcome="/script/appSetting/config"/>
+
+                </h:form>
 
 
             <h:form id="form" enctype="multipart/form-data">
 
-                <p:messages id="messages" showSummary="true"/>  
+                <p:messages id="messages" showSummary="true"/> 
+                
+                <p:toolbar>
+                        <p:toolbarGroup align="right">
+                            <go:paginatorButtons controllerMBean="#{appSettingController}" update=":form"/>
+                        </p:toolbarGroup>  
+                    </p:toolbar>
 
-                <p:dataTable value="#{appSettingController.settings}" var="data" styleClass="no-border paginated hide-column-names">
+                <p:dataTable value="#{appSettingController.items}" 
+                             var="data" styleClass="no-border paginated hide-column-names">
 
                     <p:column width="200">
                         <p:outputLabel value="#{data.label}" style="font-weight: bold;"/>
