--- a/src/main/webapp/script/caso/Edit.xhtml
+++ b/src/main/webapp/script/caso/Edit.xhtml
@@ -189,7 +189,7 @@
             </h:form>
 
 
-            <p:tabView id="inputPanel" dynamic="true" scrollable="true" cache="false" style="width: 99% !important; " activeIndex="#{casoController.activeIndexCasoSections}">
+            <p:tabView id="inputPanel" dynamic="false" scrollable="true" cache="true" style="width: 99% !important; " activeIndex="#{casoController.activeIndexCasoSections}">
                 <p:ajax event="tabChange" listener="#{casoController.onChangeActiveIndexCasoSections}" oncomplete="resizeScrollPanel();"/>
                 <p:ajax event="tabClose" listener="#{casoScheduleController.onTabClose}" />
 
@@ -301,7 +301,7 @@
                                       mode="advanced"
                                       dragDropSupport="true"
                                       auto="true"
-                                      update=":mainform:messages listaadjuntos :inputPanel:formCreateNota"
+                                      update=":mainform:messages listaadjuntos :inputPanel:formCreateNota:listaadjuntosrespuesta"
                                       multiple="true"  
                                       rendered="#{casoController.selected.open}"/>
 
@@ -771,7 +771,7 @@
                         <p:message display="both" for="nombres"/>
 
                         <p:outputLabel value="#{bundle.CreateClienteLabel_apellidos}" for="apellidos" style="font-weight:bold"/>                      
-                        <p:inputText  id="apellidos" value="#{casoController.selected.idCliente.apellidos}" label="apellidos" required="true" requiredMessage="Los apellidos son requeridos"/>                        
+                        <p:inputText  id="apellidos" value="#{casoController.selected.idCliente.apellidos}" label="apellidos"/>                        
                         <p:message display="both" for="apellidos"/>                   
 
                         <p:outputLabel value="Teléfono:" for="fono1" style="font-weight:bold"/>                    
