--- a/src/main/webapp/script/cliente/View.xhtml
+++ b/src/main/webapp/script/cliente/View.xhtml
@@ -10,7 +10,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ViewEmailClienteTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ViewEmailClienteTitle}"/>
         </ui:define>
 
         <ui:define name="west">
@@ -116,11 +116,11 @@
 
                     <p:tab id="tab3" title="Histórico de Casos" >
 
-                        <go:casoListNoForm casosList="#{clienteController.selected.casoList}" header="Histórico de Casos asociados al cliente"/>
+                        <go:casoListNoForm casosList="#{clienteController.selected.casoList}" header="Histórico de Casos asociados al cliente (#{clienteController.selected.casoList.size()})"/>
 
                         <ui:repeat value="#{clienteController.selected.emailClienteList}" var="r" >
                             <br/>
-                            <go:casoListNoForm casosList="#{r.casoList}" header="Histórico de Casos asociados al email #{r.emailCliente}"/>
+                            <go:casoListNoForm casosList="#{r.casoList}" header="Histórico de Casos asociados al email #{r.emailCliente} (#{r.casoList.size()})"/>
                         </ui:repeat>
 
                     </p:tab>
