fix de propiedad no definida
producto_contratado no tiene nombre, si no un producto el cual tiene un
nombre

--- a/src/main/webapp/script/caso/propertiesCaso.xhtml
+++ b/src/main/webapp/script/caso/propertiesCaso.xhtml
@@ -407,7 +407,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="#{applicationBean.productComponentDescription}"/>
                                 </f:facet>
-                                <h:outputText value="#{prod_cont.nombre}" title="#{prod_cont.componente.nombre}/#{prod_cont.subComponente.nombre} #{prod_cont.tipoAsociacion}"/>
+                                <h:outputText value="#{prod_cont.producto.nombre}" title="#{prod_cont.componente.nombre}/#{prod_cont.subComponente.nombre} #{prod_cont.tipoAsociacion}"/>
                             </p:column>
 
                             <p:column>
