PRE-MULTITENANT VERSION
ordered classes structure for multitenant easy of use.

--- a/src/main/webapp/script/login.xhtml
+++ b/src/main/webapp/script/login.xhtml
@@ -43,9 +43,6 @@
             <div class="row">
                 <div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
 
-
-                    <div class="account-wall">
-
                         <div align="center">
                             <p:graphicImage  
                                 value="#{applicationBean.getLogo()}"  
@@ -53,6 +50,8 @@
                         </div>
 
                         <h1 class="text-center login-title">#{bundle.LoginTitle}</h1>
+                    <div class="account-wall">
+                        <p:graphicImage styleClass="profile-img" library="images" name="avatar_2x.png" />
 
                         <!--div align="center">
                             <p:graphicImage library="images" name="ITCSHelpdesk105x105.png" width="100" height="100"/>
